5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1692_1107.log
== TEST (2019-04-27 14:37:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje"))
futuro = dias_hoje + dias_apos
if(dias_hoje == 0)
	dias_hoje = "domingo"
	print(dias_hoje)
	
-- ERROR:
File "XXXX", line 7
    if(dias_hoje == 0)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:37:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje"))
futuro = dias_hoje + dias_apos
if(dias_hoje == 0)
	dias_hoje = "domingo"
	print(dias_hoje)
	
-- ERROR:
File "XXXX", line 7
    if(dias_hoje == 0)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:37:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje"))
futuro = dias_hoje + dias_apos
if(dias_hoje == 0):
	dias_hoje = "domingo"
	print(dias_hoje)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    futuro = dias_hoje + dias_apos
NameError: name 'dias_hoje' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:38:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = dia_hoje + dias_apos
if(dia_hoje == 0):
	dia_hoje = "domingo"
	print(dia_hoje)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    futuro = dia_hoje + dias_apos
NameError: name 'dias_apos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:38:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = dia_hoje + dia_apos
if(dia_hoje == 0):
	dia_hoje = "domingo"
	print(dia_hoje)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    futuro = dia_hoje + dias_apos
NameError: name 'dias_apos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:41:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = dia_hoje + dia_apos
if(dia_hoje == 0):
	dia_hoje = "domingo"
if(dia_hoje == 1)
	dia_hoje = "segunda"
if(dia_hoje == 2):
	dia_hoje = "terca"
if(dia_hoje == 3)
	dia_hoje = "quarta"
if(dia_hoje == 4):
	dia_hoje = "quinta"
if(dia_hoje == 5)
	dia_hoje = "sexta"
if(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
	
	
	
-- ERROR:
File "XXXX", line 9
    if(dia_hoje == 1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:41:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = dia_hoje + dia_apos
if(dia_hoje == 0):
	dia_hoje = "domingo"
if(dia_hoje == 1):
	dia_hoje = "segunda"
if(dia_hoje == 2):
	dia_hoje = "terca"
if(dia_hoje == 3):
	dia_hoje = "quarta"
if(dia_hoje == 4):
	dia_hoje = "quinta"
if(dia_hoje == 5):
	dia_hoje = "sexta"
if(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
	
	
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:42:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = dia_hoje + dia_apos
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
	
	
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:42:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = dia_hoje + dia_apos
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
	
	
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:42:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = dia_hoje + dia_apos
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
	
	
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:43:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = dia_hoje + dia_apos
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
	
	
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:53:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = dia_hoje + dia_apos % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro == 0):
	futuro = "domingo"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 1):
	futuro = "segunda"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 2):
	futuro = "terça"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 3):
	futuro = "quarta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 4):
	futuro = "quinta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 5):
	futuro = "sexta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 6):
	futuro = "sabado"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:53:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = dia_hoje + dia_apos % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro == 0):
	futuro = "domingo"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 1):
	futuro = "segunda"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 2):
	futuro = "terça"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 3):
	futuro = "quarta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 4):
	futuro = "quinta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 5):
	futuro = "sexta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 6):
	futuro = "sabado"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 14:54:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = dia_hoje + dia_apos % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro == 0):
	futuro = "domingo"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 1):
	futuro = "segunda"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 2):
	futuro = "terça"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 3):
	futuro = "quarta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 4):
	futuro = "quinta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 5):
	futuro = "sexta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 6):
	futuro = "sabado"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- EXECUTION TIME:
0.14526
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:54:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = dia_hoje + dia_apos % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro == 0):
	futuro = "domingo"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 1):
	futuro = "segunda"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 2):
	futuro = "terça"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 3):
	futuro = "quarta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 4):
	futuro = "quinta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 5):
	futuro = "sexta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 6):
	futuro = "sabado"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:55:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = dia_hoje + dia_apos % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro == 0):
	futuro = "domingo"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 1):
	futuro = "segunda"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 2):
	futuro = "terça"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 3):
	futuro = "quarta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 4):
	futuro = "quinta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 5):
	futuro = "sexta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 6):
	futuro = "sabado"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
print(4+200%7)

	
	
	
-- OUTPUT:
A entrada 9 eh invalida
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 14:59:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro == 0):
	futuro = "domingo"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 1):
	futuro = "segunda"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 2):
	futuro = "terça"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 3):
	futuro = "quarta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 4):
	futuro = "quinta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 5):
	futuro = "sexta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 6):
	futuro = "sabado"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- EXECUTION TIME:
0.14262
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh quinta
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:59:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro == 0):
	futuro = "domingo"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 1):
	futuro = "segunda"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 2):
	futuro = "terça"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 3):
	futuro = "quarta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 4):
	futuro = "quinta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 5):
	futuro = "sexta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 6):
	futuro = "sabado"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:59:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro == 0):
	futuro = "domingo"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 1):
	futuro = "segunda"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 2):
	futuro = "terça"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 3):
	futuro = "quarta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 4):
	futuro = "quinta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 5):
	futuro = "sexta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 6):
	futuro = "sabado"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:00:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro == 0):
	futuro = "domingo"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 1):
	futuro = "segunda"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 2):
	futuro = "terca"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 3):
	futuro = "quarta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 4):
	futuro = "quinta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 5):
	futuro = "sexta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 6):
	futuro = "sabado"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 15:00:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro == 0):
	futuro = "domingo"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 1):
	futuro = "segunda"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 2):
	futuro = "terca"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 3):
	futuro = "quarta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 4):
	futuro = "quinta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 5):
	futuro = "sexta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 6):
	futuro = "sabado"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- EXECUTION TIME:
0.119349
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh quinta
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:01:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro == 0):
	futuro = "domingo"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 1):
	futuro = "segunda"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 2):
	futuro = "terca"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 3):
	futuro = "quarta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 4):
	futuro = "quinta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 5):
	futuro = "sexta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 6):
	futuro = "sabado"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:01:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro == 0):
	futuro = "domingo"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 1):
	futuro = "segunda"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 2):
	futuro = "terca"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 3):
	futuro = "quarta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 4):
	futuro = "quinta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 5):
	futuro = "sexta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 6):
	futuro = "sabado"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:02:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro == 0):
	futuro = "domingo"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 1):
	futuro = "segunda"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 2):
	futuro = "terca"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 3):
	futuro = "quarta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 4):
	futuro = "quinta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 5):
	futuro = "sexta"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
if(futuro == 6):
	futuro = "sabado"
	print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:04:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro<7):
	if(futuro == 0):
		futuro = "domingo"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 1):
		futuro = "segunda"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 2):
		futuro = "terca"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 3):
		futuro = "quarta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 4):
		futuro = "quinta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 5):
		futuro = "sexta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 6):
		futuro = "sabado"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:04:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro<7):
	if(futuro == 0):
		futuro = "domingo"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 1):
		futuro = "segunda"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 2):
		futuro = "terca"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 3):
		futuro = "quarta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 4):
		futuro = "quinta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 5):
		futuro = "sexta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 6):
		futuro = "sabado"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:04:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro<7):
	if(futuro == 0):
		futuro = "domingo"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 1):
		futuro = "segunda"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 2):
		futuro = "terca"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 3):
		futuro = "quarta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 4):
		futuro = "quinta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 5):
		futuro = "sexta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 6):
		futuro = "sabado"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:04:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro<7):
	if(futuro == 0):
		futuro = "domingo"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 1):
		futuro = "segunda"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 2):
		futuro = "terca"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 3):
		futuro = "quarta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 4):
		futuro = "quinta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
43
      futuro = "sabado"
44
      print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
45
	if(futuro == 5):
		futuro = "sexta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 6):
		futuro = "sabado"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- ERROR:
File "XXXX", line 40
    futuro = "sabado"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:04:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(dia_hoje == 0):
	dia_hoje = "domingo"
elif(dia_hoje == 1):
	dia_hoje = "segunda"
elif(dia_hoje == 2):
	dia_hoje = "terca"
elif(dia_hoje == 3):
	dia_hoje = "quarta"
elif(dia_hoje == 4):
	dia_hoje = "quinta"
elif(dia_hoje == 5):
	dia_hoje = "sexta"
elif(dia_hoje == 6):
	dia_hoje = "sabado"
else:
	print("A entrada",dia_hoje,"eh invalida")
if(futuro<7):
	if(futuro == 0):
		futuro = "domingo"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 1):
		futuro = "segunda"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 2):
		futuro = "terca"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 3):
		futuro = "quarta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 4):
		futuro = "quinta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 5):
		futuro = "sexta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 6):
		futuro = "sabado"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:10:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(0<= dia_hoje <7):
	if(dia_hoje == 0):
		dia_hoje = "domingo"
	if(dia_hoje == 1):
		dia_hoje = "segunda"
	if(dia_hoje == 2):
		dia_hoje = "terca"
	if(dia_hoje == 3):
		dia_hoje = "quarta"
	if(dia_hoje == 4):
		dia_hoje = "quinta"
	if(dia_hoje == 5):
		dia_hoje = "sexta"
	if(dia_hoje == 6):
		dia_hoje = "sabado"
	if(futuro == 0):
		futuro = "domingo"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 1):
		futuro = "segunda"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 2):
		futuro = "terca"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 3):
		futuro = "quarta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 4):
		futuro = "quinta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 5):
		futuro = "sexta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 6):
		futuro = "sabado"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
else:
	print("A entrada",dia_hoje,"eh invalida")


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:10:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(0<= dia_hoje <7):
	if(dia_hoje == 0):
		dia_hoje = "domingo"
	if(dia_hoje == 1):
		dia_hoje = "segunda"
	if(dia_hoje == 2):
		dia_hoje = "terca"
	if(dia_hoje == 3):
		dia_hoje = "quarta"
	if(dia_hoje == 4):
		dia_hoje = "quinta"
	if(dia_hoje == 5):
		dia_hoje = "sexta"
	if(dia_hoje == 6):
		dia_hoje = "sabado"
	if(futuro == 0):
		futuro = "domingo"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 1):
		futuro = "segunda"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 2):
		futuro = "terca"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 3):
		futuro = "quarta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 4):
		futuro = "quinta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 5):
		futuro = "sexta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 6):
		futuro = "sabado"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
else:
	print("A entrada",dia_hoje,"eh invalida")


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:10:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(0<= dia_hoje <7):
	if(dia_hoje == 0):
		dia_hoje = "domingo"
	if(dia_hoje == 1):
		dia_hoje = "segunda"
	if(dia_hoje == 2):
		dia_hoje = "terca"
	if(dia_hoje == 3):
		dia_hoje = "quarta"
	if(dia_hoje == 4):
		dia_hoje = "quinta"
	if(dia_hoje == 5):
		dia_hoje = "sexta"
	if(dia_hoje == 6):
		dia_hoje = "sabado"
	if(futuro == 0):
		futuro = "domingo"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 1):
		futuro = "segunda"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 2):
		futuro = "terca"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 3):
		futuro = "quarta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 4):
		futuro = "quinta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 5):
		futuro = "sexta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 6):
		futuro = "sabado"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
else:
	print("A entrada",dia_hoje,"eh invalida")


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 15:10:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(0<= dia_hoje <7):
	if(dia_hoje == 0):
		dia_hoje = "domingo"
	if(dia_hoje == 1):
		dia_hoje = "segunda"
	if(dia_hoje == 2):
		dia_hoje = "terca"
	if(dia_hoje == 3):
		dia_hoje = "quarta"
	if(dia_hoje == 4):
		dia_hoje = "quinta"
	if(dia_hoje == 5):
		dia_hoje = "sexta"
	if(dia_hoje == 6):
		dia_hoje = "sabado"
	if(futuro == 0):
		futuro = "domingo"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 1):
		futuro = "segunda"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 2):
		futuro = "terca"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 3):
		futuro = "quarta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 4):
		futuro = "quinta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 5):
		futuro = "sexta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 6):
		futuro = "sabado"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
else:
	print("A entrada",dia_hoje,"eh invalida")


	
	
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 15:10:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia_hoje = int(input("Entre com o numero do dia de hoje: "))
dia_apos = int(input("Entre com o numero de dias apos hoje: "))
futuro = (dia_hoje + dia_apos) % 7
if(0<= dia_hoje <7):
	if(dia_hoje == 0):
		dia_hoje = "domingo"
	if(dia_hoje == 1):
		dia_hoje = "segunda"
	if(dia_hoje == 2):
		dia_hoje = "terca"
	if(dia_hoje == 3):
		dia_hoje = "quarta"
	if(dia_hoje == 4):
		dia_hoje = "quinta"
	if(dia_hoje == 5):
		dia_hoje = "sexta"
	if(dia_hoje == 6):
		dia_hoje = "sabado"
	if(futuro == 0):
		futuro = "domingo"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 1):
		futuro = "segunda"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 2):
		futuro = "terca"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 3):
		futuro = "quarta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 4):
		futuro = "quinta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 5):
		futuro = "sexta"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
	if(futuro == 6):
		futuro = "sabado"
		print("Hoje eh",dia_hoje,"e o dia futuro eh",futuro)
else:
	print("A entrada",dia_hoje,"eh invalida")


	
	
	
-- EXECUTION TIME:
0.138058
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
